
syntax = "proto3";

package ordersproto;

service OrderService{
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {};
    rpc FindAllOrders(FindAllOrdersRequest) returns (FindAllOrdersResponse) {};
    rpc FindOneOrder(FindOneOrderRequest) returns (FindOneOrderResponse) {};
    rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse) {};
    rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse) {};
}

message DeleteOrderRequest{
    int32 order_id = 1;
}

message DeleteOrderResponse{
    bool delete = 1;
}

message UpdateOrderRequest{
    int32 order_id = 1;
    string account_id = 2;
    string asset_id = 3;
    int32 quantity = 4;
    string status = 5;
}

message UpdateOrderResponse{
    Order order = 1;
}

message CreateOrderRequest{
    string account_id = 1;
    string asset_id = 2;
    int32 quantity = 3;
}

message Order {
    int32 order_id = 1;
    string account_id = 2;
    string asset_id = 3;
    int32 quantity = 4;
    string status = 5;
}

message CreateOrderResponse{
    Order order = 1;
}

message FindAllOrdersRequest{
    string account_id = 1;
}

message FindAllOrdersResponse{
    repeated Order orders = 1;
}

message FindOneOrderRequest{
    int32 order_id = 1;
}

message FindOneOrderResponse{
    Order order = 1;
}